Minor port work